# card_deck_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_push.yaml  lint_build_check_version.yaml  lint_build_push.yaml  linter_workflow.yaml  my_workflow.yaml
integration_tests/: test_card.py  test_dealer.py  test_player.py  test_stack.py
src/: card.py  main.py  suit.py
src/card_deck_manager/: __init__.py  card.py  dealer.py  deck_creation.py  game.py  player.py  stack.py  suit.py
src/card_deck_manager/exceptions/: stack_exceptions.py
src/card_deck_manager/python_tools/: singleton.py
