[project]
name = "card_deck_manager"
version = "2.1.0"
authors = [
  { name="Losson Simon", email="simon.losson@student.junia.com" },
]
description = "A card deck manager which you can create games with."
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T20",  # Print
    "TC001",  # Move into type checking block
    "D203",  # Incorrect blank line before class
    "D212",  # Multi line summary second line
]

# Source - https://stackoverflow.com/a
# Posted by FlightPlan, modified by community. See post 'Timeline' for change history
# Retrieved 2026-01-24, License - CC BY-SA 4.0

[tool.ruff.lint.per-file-ignores]
"integration_tests/*" = ["S101"]

